# task1-StudentPlatformManagementSystem

./: CMakeLists.txt  addInfo.cpp  client.cpp  server.cpp  student.cpp  student.hpp  students.json
